# andrascsanyi_com

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  basic_template.json  index.html  index.json  manifest.json  math_tmpl.json  sitemap.xml  toc.html  toc.json
aerospace_engineering/: introduction.html
anki_gen/: generator.py
blog/: toc.html  (+5 more)
cli/exercises/: Cargo.toml
cli/exercises/generated_test/: 2025-07-21_18-19-21.tex
cli/exercises/src/: chapter_catalog.rs  main.rs
cli/exercises/src/cli/: mod.rs
cli/exercises/src/cli/commands/: book_subcommand.rs  generate_book.rs  list.rs  mod.rs
cli/exercises/src/cli/matchers/: book.rs  generate.rs  list.rs  mod.rs
cli/exercises/src/collectors/: books.rs  collector.rs  mod.rs  topics.rs
cli/exercises/src/logic/: generate_from_a_book.rs  get_and_print_details_of_a_book.rs  get_chapters_of_a_book.rs  get_list_of_books.rs  get_sections_of_a_chapter.rs  mod.rs
cli/exercises/src/logic/arg_collectors/: generate_from_a_book.rs
cli/exercises/src/logic/builders/: studies_tree.rs
cli/exercises/src/logic/controllers/: generate_from_a_book.rs  mod.rs  sync_fs_with_db.rs
cli/exercises/src/logic/database/schema/: books.sql  topics.sql
cli/exercises/src/logic/orm/: topic.rs
cli/exercises/src/logic/parsers/: mod.rs  sections.rs
cli/exercises/src/logic/renderers/: pdf.rs
cli/exercises/src/logic/structs/: book.rs  chapter.rs  section.rs  topic.rs
cli/exercises/src/parsers/: books.rs  chapter.rs  mod.rs  section.rs  topics.rs
cli/exercises/src/structs/: book.rs  chapter.rs  mod.rs  section.rs  topic.rs
(+119 files in other folders)
