[package]
name = "exercises"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls"] }
config = "0.15.13"
clap = { version = "4.5.40", features = ["derive", "cargo"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.0"
walkdir = "2.5.0"
tabled = "0.20.0"
rand = "0.9.1"
chrono = "0.4.39"
welds = { version = "0.4.16", features = ["postgres"] }
